--- a/style.css
+++ b/style.css
@@ -1,13 +1,34 @@
+:root {
+  --cor-primaria: #e21;
+  --cor-primaria-escura: #900;
+  --fundo-1: #f7f7f7;
+  --fundo-2: #ffffff;
+  --texto: var(--texto);
+  --subtitulo: rgba(0, 0, 0, 0.2);
+  --onda: url(img/onda-clara.svg);
+}
+
+@media (prefers-color-schema: dark) {
+  :root {
+    --fundo-1: #111;
+    --fundo-2: #000;
+    --texto: #ffffff;
+    --subtitulo: rgba(255, 255, 255, 0.2);
+    --onda: url(img/onda-escura.svg);
+  }
+}
+
 /***STYLE DEFAULT***/
 
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
-  background: #f7f7f7;
+  background: var(--fundo-1);
   display: grid;
   gap: 60px;
   justify-items: center;
   margin-top: 60px;
+  color: var(--texto);
 }
 
 img {
@@ -58,17 +79,17 @@ p {
 /***BOTOES DE LINK DO MENU***/
 .menu a {
   display: block;
-  background: #ffffff;
+  background: var(--fundo-2);
   padding: 1rem 2rem;
   border-radius: 4px;
-  color: #000000;
+  color: var(--texto);
   text-transform: uppercase;
-  border: 2px solid #ffffff;
+  border: 2px solid var(--fundo-2);
 }
 
 /***QUANDO PASSAR O MOUSE CRIA A BORDA VERMELHA**/
 .menu a:hover {
-  border: 2px solid #e21;
+  border: 2px solid var(--cor-primaria);
 }
 
 /***CONTEUDO DO SITE***/
@@ -80,7 +101,7 @@ p {
 
 /***INTRODUÇÃ***/
 .introducao {
-  background: #ffffff;
+  background: var(--fundo-2);
   padding: 40px;
   text-align: right;
   position: relative;
@@ -98,7 +119,7 @@ p {
   content: "";
   width: 60px;
   height: 4px;
-  background: #e21;
+  background: var(--cor-primaria);
   position: absolute;
   top: 30px;
   right: -30px;
@@ -111,15 +132,15 @@ p {
 }
 
 .botao {
-  background: #e21;
-  color: #fff;
+  background: var(--cor-primaria);
+  color: #ffffff;
   padding: 1rem 2rem;
   border-radius: 4px;
   text-transform: uppercase;
 }
 
 .botao:hover {
-  background: #900;
+  background: var(--cor-primaria-escura);
 }
 
 /***FIM INTRODUÇÃO***/
@@ -128,10 +149,10 @@ p {
 
 /***SUBSTITULO VANTAGENS***/
 .subtitulo {
-  background-image: url(img/onda.svg);
+  background-image: var(--onda);
   font-size: 4rem;
   text-transform: uppercase;
-  color: rgba(0, 0, 0, 0.2);
+  color: var(--subtitulo);
   text-align: right;
   padding: 2.5rem;
   align-self: center;
@@ -140,7 +161,7 @@ p {
 
 /***VANTAGENS COM FUNDO BRANCO***/
 .vantagens {
-  background: #fff;
+  background: var(--fundo-2);
   padding: 2.5rem;
 }
 
@@ -155,12 +176,12 @@ p {
 
 .vantagens-item:nth-child(odd) {
   /*toda linha par da lista vai ter o background de cor diferente*/
-  background: #f7f7f7;
+  background: var(--fundo-1);
 }
 
 .vantagens-item:hover {
   /*cria uma linha ao lado dos itens das vantagens quando passar o mouse*/
-  border-left: 4px solid #e21;
+  border-left: 4px solid var(--cor-primaria);
 }
 
 .vantagens-item p {
@@ -173,7 +194,7 @@ p {
 /***RODAPE***/
 
 .rodape {
-  background: #fff;
+  background: var(--fundo-2);
   width: 100%;
   text-align: center;
   padding: 2.5rem;
